# janus-call-service

./: .gitignore  Cargo.toml
config/: config.yml  log4rs.yaml
setup/kamailio/: Dockerfile  docker-compose.yaml
setup/kamailio/config/: kamailio.cfg
setup/rtp-engine/: Dockerfile  docker-compose.yaml  rtpengine.conf
src/: app_state.rs  main.rs  router.rs
src/call/: app_to_app_call.rs  mod.rs  sip_to_app_call.rs
src/call/call_flow/: call_actor.rs  call_model.rs  mod.rs  peer_to_peer_call.rs  supervisor.rs
src/call/call_flow/call_type/: message_helper.rs  mod.rs
src/call/call_flow/call_type/app_to_app_routing/state/: a2a_call_state.rs  a2a_end_state.rs  mod.rs  (+5 more)
src/config/: config.rs  constants.rs  mod.rs  mongodb_cfg.rs
src/controller/: auth_controller.rs  janus_event_controller.rs  mod.rs  user_controller.rs
src/middlerware/: auth.rs
src/model/: auth.rs  candidate.rs  codec.rs  janus.rs  janus_webrtc.rs  mod.rs  response.rs  user.rs  user_info.rs
src/network/: mod.rs  sip_transport.rs
src/repo/: user_repo.rs
src/service/: login_service.rs  mod.rs
src/service/janus/: audio_bridge_service.rs  mod.rs  session_service.rs
src/utils/: call_id_gen.rs  code_utils.rs  cookie_util.rs  email_utils.rs  jsep_utils.rs  json_utils.rs  jwt_helper.rs  mod.rs  sdp_util.rs  sip_utils.rs
src/websocket/: janus_ws_handler.rs  mod.rs  websocket_handler.rs  ws_connection.rs
src/websocket/ws_handlers/: mod.rs  ws_answer_handler.rs  ws_auth_handler.rs  ws_candidate_handler.rs  ws_end_call_handler.rs  ws_incall_req_handler.rs  ws_sdp_handler.rs  ws_start_call.rs
(+5 files in other folders)
