[package]
name = "janus-call-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
# Web framework với WebSocket support
axum = { version = "0.8.4", features = ["json", "multipart", "ws"] }
# Async runtime — full bật tất cả feature
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Concurrent hashmap — thay Mutex ở nhiều chỗ
dashmap = "6"
# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }
# Async trait support
async-trait = "0.1"
# Logging
log = "0.4"
log4rs = { version = "1.4.0", features = ["gzip"] }
# Error handling
anyhow = "1"
# MongDB driver
mongodb = "3.3.0"
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
# JWT
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
# Argon2 password hashing
argon2 = "0.5.3"
regex = "1.12.3"
cookie = "0.18.1"
bytes = "1.10.1"
futures = "0.3.32"
http = "1.4.0"
tower-http = "0.6.8"
rand = "0.10.0"
reqwest = { version = "0.12.23", features = ["native-tls", "multipart", "json", "cookies", "stream", "socks"] }